--- a/2021_4_9Last Duty Report/演讲稿.md
+++ b/2021_4_9Last Duty Report/演讲稿.md
@@ -1,3 +1,35 @@
+# 第二版 内卷
+
+ The theme of my report today is the involution.
+The word was invented by Clifford Geertz  to describe a local agricultural phenomenon
+Before we know what involution is, it's everywhere
+Some people complain about it and get used to it
+Maybe you think this expression is overstate, but one day, You will encounter this phenomenon
+
+
+involution is harmful to both organization and individuals
+Two days ago,i read an article about how  to stay away from involution,now,i will share with you.
+
+1. Abandoning prejudice and redefining success
+2. get in touch with new things
+3. Keep learning
+
+我今天报告的主题是内卷化。
+这个词被Clifford Geertz发明，用于表述当地的一种农业现象
+当我们还没有搞懂内卷化是什么的时候，它已经无处不在了
+或许你觉得这个表述很夸张，但总有一天，你会遇到它
+
+1. 抛弃思维偏见，重新定义成功
+2. 跳出封闭全，接触新鲜事物
+3. 不断学习，提高核心竞争力
+
+
+
+当我开始准备演讲稿的时候，我打算分享的主题是“如何逃离内卷”。但当我写下第一条小标题：”重新定义成功“
+并在正文中建议大家逃离内卷的行业。我觉得这个观点没有站在当事人的立场，仅仅以陌生人的角度看待问题。
+
+# 第三版
+
 可能你没有看过这部电影，其实我也没看过，我只是看了一些视频介绍。但是就那么短短十几分钟，就把我自己带入到其中了。
 
 可能即使你看了也未必觉得那是一部好电影。
