--- a/Bite鹏哥C语言/101-初始C语言(1)-210331.md
+++ b/Bite鹏哥C语言/101-初始C语言(1)-210331.md
@@ -5,7 +5,7 @@
    3. 课程
    4. 老师
    5. 班主任
-3. 星球----
+3. - [x] 星球
 4. 待做事项：
    1. 群里每天结束的gitee代码和草稿截图、群内精华消息电脑端、及时关注群文件更新、多关注群消息
    2. xmind-思维导图
@@ -33,6 +33,11 @@
       1. 新建项目
       2. 创建源文件
       3. 写代码
-      4. 编译代码
-   4. 
+      4. 编译+链接+运行代码
+   4. 解决看不到运行结果-设置项目属性(2019不用设置)
+      1. 右击项目名称-点击属性
+      2. 配置属性列表下找到连接器
+      3. 连接器中的系统
+      4. 找到子系统--更改为控制台
+   5. 
 
