--- a/C语言程序设计(何钦铭第三版)课本及实验与习题指南中的练习/第十章.md
+++ b/C语言程序设计(何钦铭第三版)课本及实验与习题指南中的练习/第十章.md
@@ -88,5 +88,81 @@
 
    - 错误挺多
 
-5. 
+5. ```c++
+   // 错误：printf("%s ", **(ppch + i)); %s 取的是地址
+   printf("%s ", *(ppch + i));
+   ```
 
+6. ~~~c++
+   #include<stdio.h>
+   int main() {
+   	char* ch[4] = { "一我的。。。。","帆我的。。。","风顺、、、、","顺我。。。。" };
+   	char mean[9] = { 0 };// 用于存储汉字--2*4+1 结束标志
+   	int i=0;
+   	for (i = 0; i < 4; i++) {
+   		mean[2 * i] = *ch[i];
+   		// 错误：mean[2 * i + 1] = *ch[i] + 1; 
+   		mean[2 * i + 1] = *(ch[i] + 1);
+   	}
+   	// 别忘了加结束标志
+   	mean[2 * i] = '\0';
+   	printf("%s", mean);
+   	return 0;
+   }
+   ~~~
+
+7. ~~~c++
+   // 按照自己的方法暂时做不出来
+   
+   #include"Head.h"
+   #include<cstdio>
+   
+   int main() {
+   	int count = 0;// 用于记录存入的单词数量
+   	char tmp[20] = { 0 };// 暂存区
+   	// 虽然告诉了单词数小于20，但是要求用动态分配内存，所以只能定义指针
+   
+   	printf("Enter some colors: \n");
+   	scanf("%s", tmp);
+   	// char** p; 这里二级指针几乎没用，原题中也是用的color[i]，并没有用到color(二级指针)。
+   	// 指针没有初始化，不能使用
+   	char** p=NULL;
+   	while (tmp[20] != '#') {
+   		*(p+count) = (char*)malloc(20);
+   		strcpy(*p, tmp);
+   		count++;
+   		scanf("%s", tmp);
+   	}
+   	for (int i = 0; i < count; i++) {
+   		printf("%s  ", *(p + count));
+   	}
+   	return 0;
+   }
+   ~~~
+
+8. ~~~c++
+   int Match(char s[], char ch) {
+   	int i=0;
+   	for (i = 0; s[i] != ch && s[i] != '\0'; i++);// 错误：for (i = 0; s[i] != ch || s[i] != '\0'; i++)
+   		//if (s[i] == ch)
+   			//break;
+   	if (s[i] == '\0') return -1;
+   	else return i;
+   }
+   int main() {
+   	char string[100] = { 0 };
+   	char ch = '0';
+   	cout << "Enter string : ";
+   	cin >> string;
+   	cout << "Enter ch : ";
+   	cin >> ch;
+   	int loc=Match(string, ch);
+   	if (loc == -1)
+   		cout << "No found";
+   	else
+   		cout << string + loc;
+   	return 0;
+   }
+   ~~~
+
+9. 
