--- a/C语言程序设计(何钦铭第三版)课本及实验与习题指南中的练习/第十章.md
+++ b/C语言程序设计(何钦铭第三版)课本及实验与习题指南中的练习/第十章.md
@@ -1,4 +1,4 @@
-1. 
+1. 如何菜单和选项循环出现
 
    ```c++
    #include"Head.h"
@@ -35,112 +35,126 @@
 
    - 应该就是这个模板了，先输出菜单进行选择；进入循环，进行操作，再输出菜单进行选择
 
-2. ~~~C++
-   // 几个宏定义的书写格式
-   #define MAX(a,b) a>b?a:b
-   #define SQR(x) x*x
-   #define MIN 12
-   const int pi = 3.14;
-   ~~~
+2.  宏定义的书写格式
 
-3. ~~~c++
-   // 考察 二维数组、指针数组
-   int main() {
-   	char color[5][10] = { "red","blue","yellow","green","black" };
-   	char ch[10] = { 0 };
-   	cout << "string : ";
-   	cin >> ch;
-   	for (int i = 0; i < 5; i++)
-   		if (!strcmp(ch, color[i])) {
-   			cout << i + 1;
-   			return 0;// 如果用开关也行，这里的开关也可以是i的值是否等于5
-   		}
-   		cout << "No Found";
-   	return 0;
-   }
-   ~~~
+    ~~~c++
+    // 几个宏定义的书写格式
+    #define MAX(a,b) a>b?a:b
+    #define SQR(x) x*x
+    #define MIN 12
+    const int pi = 3.14;
+    ~~~
 
-   - 指针数组等 鹏哥后面部分还没掌握
+3. 考察 二维数组、指针数组
 
-4. ~~~C++
-   // 使用二级指针改写11-1
-   #define _CRT_SECURE_NO_WARNINGS 1
-   #include<stdio.h>
-   #include<string.h>
-   
-   int main() {
-   	char* p[5] = { "red","blue","yellow","green","black" };// 指针数组只能在 .c 文件中存在
-   	char** pp = p;
-   
-   	char ch[10] = { 0 };
-   	scanf("%s",ch);
-   	for (int i = 0; i < 5; i++) {
-   		if (!strcmp(ch, *(pp + i))) 
-   		{//if (strcmp(ch, **(pp + i)))只需要解引用一次，因为strcmp参数是地址,忘记加 ！
-   			printf("%d", i + 1);
-   				return 0;
-   		}
-   	}
-   	printf("No found");
-   	return 0;
-   }
-   ~~~
+    ~~~c++
+    // 考察 二维数组、指针数组
+    int main() {
+    	char color[5][10] = { "red","blue","yellow","green","black" };
+    	char ch[10] = { 0 };
+    	cout << "string : ";
+    	cin >> ch;
+    	for (int i = 0; i < 5; i++)
+    		if (!strcmp(ch, color[i])) {
+    			cout << i + 1;
+    			return 0;// 如果用开关也行，这里的开关也可以是i的值是否等于5
+    		}
+    		cout << "No Found";
+    	return 0;
+    }
+    ~~~
 
-   - 错误挺多
+    - 指针数组等 鹏哥后面部分还没掌握
 
-5. ```c++
-   // 错误：printf("%s ", **(ppch + i)); %s 取的是地址
-   printf("%s ", *(ppch + i));
-   ```
+4. 错题
 
-6. ~~~c++
-   #include<stdio.h>
-   int main() {
-   	char* ch[4] = { "一我的。。。。","帆我的。。。","风顺、、、、","顺我。。。。" };
-   	char mean[9] = { 0 };// 用于存储汉字--2*4+1 结束标志
-   	int i=0;
-   	for (i = 0; i < 4; i++) {
-   		mean[2 * i] = *ch[i];
-   		// 错误：mean[2 * i + 1] = *ch[i] + 1; 
-   		mean[2 * i + 1] = *(ch[i] + 1);
-   	}
-   	// 别忘了加结束标志
-   	mean[2 * i] = '\0';
-   	printf("%s", mean);
-   	return 0;
-   }
-   ~~~
+    ~~~c++
+    // 使用二级指针改写11-1
+    #define _CRT_SECURE_NO_WARNINGS 1
+    #include<stdio.h>
+    #include<string.h>
+    
+    int main() {
+    	char* p[5] = { "red","blue","yellow","green","black" };// 指针数组只能在 .c 文件中存在
+    	char** pp = p;
+    
+    	char ch[10] = { 0 };
+    	scanf("%s",ch);
+    	for (int i = 0; i < 5; i++) {
+    		if (!strcmp(ch, *(pp + i))) 
+    		{//if (strcmp(ch, **(pp + i)))只需要解引用一次，因为strcmp参数是地址,忘记加 ！
+    			printf("%d", i + 1);
+    				return 0;
+    		}
+    	}
+    	printf("No found");
+    	return 0;
+    }
+    ~~~
 
-7. ~~~c++
-   // 按照自己的方法暂时做不出来
-   
-   #include"Head.h"
-   #include<cstdio>
-   
-   int main() {
-   	int count = 0;// 用于记录存入的单词数量
-   	char tmp[20] = { 0 };// 暂存区
-   	// 虽然告诉了单词数小于20，但是要求用动态分配内存，所以只能定义指针
-   
-   	printf("Enter some colors: \n");
-   	scanf("%s", tmp);
-   	// char** p; 这里二级指针几乎没用，原题中也是用的color[i]，并没有用到color(二级指针)。
-   	// 指针没有初始化，不能使用
-   	char** p=NULL;
-   	while (tmp[20] != '#') {
-   		*(p+count) = (char*)malloc(20);
-   		strcpy(*p, tmp);
-   		count++;
-   		scanf("%s", tmp);
-   	}
-   	for (int i = 0; i < count; i++) {
-   		printf("%s  ", *(p + count));
-   	}
-   	return 0;
-   }
-   ~~~
+    - 错误挺多
 
-8. ~~~c++
+5. 错题
+
+    ~~~c++
+    // 错误：printf("%s ", **(ppch + i)); %s 取的是地址
+    printf("%s ", *(ppch + i));
+    ~~~
+
+6. 汉字字符
+
+    ~~~c++
+    #include<stdio.h>
+    int main() {
+    	char* ch[4] = { "一我的。。。。","帆我的。。。","风顺、、、、","顺我。。。。" };
+    	char mean[9] = { 0 };// 用于存储汉字--2*4+1 结束标志
+    	int i=0;
+    	for (i = 0; i < 4; i++) {
+    		mean[2 * i] = *ch[i];
+    		// 错误：mean[2 * i + 1] = *ch[i] + 1; 
+    		mean[2 * i + 1] = *(ch[i] + 1);
+    	}
+    	// 别忘了加结束标志
+    	mean[2 * i] = '\0';
+    	printf("%s", mean);
+    	return 0;
+    }
+    ~~~
+
+7. 二级指针
+
+    ~~~c++
+    #include"Head.h"
+    #include<cstdio>
+    
+    int main() {
+    	int count = 0;// 用于记录存入的单词数量
+    	char tmp[20] = { 0 };// 暂存区
+    	// 虽然告诉了单词数小于20，但是要求用动态分配内存，所以只能定义指针
+    
+    	printf("Enter some colors: \n");
+    	scanf("%s", tmp);
+    	// char** p; 这里二级指针几乎没用，原题中也是用的color[i]，并没有用到color(二级指针)。
+    	// 指针没有初始化，不能使用
+    	// 指针的初始化，必须要有变量、数组才行，这么来看，直接定义数组方便得多
+    	char* string[20];
+    	char** p=string;
+    	while (tmp[0] != '#') {// 这里tmp字符串内还有 \0 结尾，所以不能和'#'比较
+    		*(p+count) = (char*)malloc(20);
+    		strcpy(*(p+count), tmp);
+    		count++;
+    		scanf("%s", tmp);
+    	}
+    	for (int i = 0; i < count; i++) {
+    		printf("%s  ", *(p + i));// 二级指针 应用时 * 解引用之后得到的是什么。这个思维还不是很熟练
+    	}
+    	return 0;
+    }
+    ~~~
+
+8. 错题
+
+   ~~~c++
    int Match(char s[], char ch) {
    	int i=0;
    	for (i = 0; s[i] != ch && s[i] != '\0'; i++);// 错误：for (i = 0; s[i] != ch || s[i] != '\0'; i++)
