--- a/C语言/牛客网/牛客网-编程初学者入门训练/总结.md
+++ b/C语言/牛客网/牛客网-编程初学者入门训练/总结.md
@@ -3,6 +3,14 @@
 1. 由于状态不是很好，当前只是参考了曾经的最后一次提交的代码；而别人的提交（官方讨论、官方解题）和我曾经的错误都没有整理。
 2. 2021.4.14-距离蓝桥杯还有4天。目前重要考点知识还不会。由于C++和数据结构与算法基础不行，连刷题的能力和阅读代码的能力也不行。因为没有方向堕落了两天，现在整理一下以往的基础题，希望能在比赛上有作用！
 
+# 改变计划
+
+1. 第一次进行整理到第二次进行整理。差不多每次的效率都是10题/h。
+2. 虽然也不慢，但对于大后天的比赛来说，来不及
+3. 所以接下来进行浏览。
+4. 等到比赛结束后，不进行牛客网和Typora笔记的分开记，而是直接截图到typora。再将VS中的代码及注释都放在一道题中。如果需要特别注意的内容打印pdf后进行标记。
+   1. 另外、需要进行分门别类的题型。等到所有题目都转移到typora上再进行总结
+
 # 2. 网址
 
 [编程初学者入门训练](https://www.nowcoder.com/ta/beginner-programmers)
@@ -20,6 +28,7 @@
    5.  scanf函数遇到什么停止还是不清楚---数组边输入边输出时为何在“输入有回车就偏离预期了“
 3. 几乎都刷出感觉了—栈溢出就是输入的时候没有加&
 4. 时间限制1s—计算机一秒运行10^9次（1GHz）——一般时间复杂度是O(n*n)的都很危险
+5. 例如BC-7 缩短二进制，题干中的信息有些是可以点击进行百度的
 
 # 记牢
 
@@ -43,6 +52,8 @@
       > 在VS中X、x均能识别
 
    2. 备注中提到的前导#没有用到，不理解是什么意思
+
+   - 错误原因：开头都是0零，不是 o
 
 2. BC17-计算表达式的值：注意整型提升……（这个在2021.3.23，只看了一遍，有待深入掌握）
 
@@ -115,13 +126,105 @@
 
    1. 通过scanf函数的%m格式控制可以指定输入域宽，输入数据域宽（列数），按此宽度截取所需数据；通过printf函数的**%0格式控制符**，输出数值时指定左面不使用的空位置自动填0。
 
-# 未掌握的知识
+10. int 差不多能存 1E9
+
+11. 科学记数法  E   既可以大写E也可以小写e
+
+# 第一次遇见的知识
 
 1. 遇到一本C语言书中关于sizeof的题。注意sizeof是关键字，不是函数
+
 2. 通过scanf函数的**%m****格式控制**可以指定输入域宽，输入数据域宽（列数），按此宽度截取所需数据；通过printf函数的**%0格式控制符**，输出数值时指定左面不使用的空位置自动填0。
+
 3. %运算只能用在整型中
+
 4. BC29-2的n次方计算：暂时脑海里有的算法“递归、循环、移位“。而这里的移位不用循环也行
+
 5. BC43-及格分数：字符数组赋值字符串需要用到函数strcpy，字符串中还可以存回车符(\n):strcpy(arr,"Pass\n");
+
+6. [浮点数的个位数字](https://www.nowcoder.com/practice/ffa94d27c6534396aef38813535c279f?tpId=107&tags=&title=&diffculty=0&judgeStatus=0&rp=1&tab=answerKey)
+
+   1. 用%d的格式赋值给float都可以！
+
+      ```c
+      int main()
+      {
+          int a;
+          scanf("%d",&a);
+          printf("%d",a%10);
+          return 0;
+      }
+      ```
+
+   2. (int)强制类型转换优先级高于 取模-% 运算
+
+      ```c
+      int main()
+      {
+          float a;
+          scanf("%f",&a);
+          printf("%d",(int)a%10);
+          return 0;
+      }
+      ```
+
+   3. 错误代码
+
+      ```c
+      int main()
+      {
+          float a=0;
+          int b=a;
+          scanf("%f",&a);
+          printf("%d",b%10);
+          return 0;
+      }
+      ```
+
+      1. 这题中float直接赋值给int都没问题。之后有一道题double赋给int出现了问题“小乐乐该数字“，浮点型的存储还是没有深入理解
+
+      - 错因：a赋值给b之后才对a进行赋值
+
+7. [你能活多少秒](https://www.nowcoder.com/practice/e1d1bd99fee34b66ae3c777b74d555c8?tpId=107&tags=&title=&diffculty=0&judgeStatus=0&rp=1&tab=answerKey)
+
+   ```c
+   int main()
+   {
+       int age = 0;
+       scanf("%d", &age);
+       printf("%d", age * 3.156E7);
+       return 0;
+   }
+   ```
+
+   - 错因：printf后面列表中类型是double类型。而3.156E7确实是个整数
+
+   - 另外对于科学记数法，到底它是int还是float类型？
+
+     1.  这种形式结果正确。
+
+        ```c
+        int main()
+        {
+            int b = 3.156E7;
+            int age;
+            scanf("%d", &age);
+            printf("%d", age * b);
+            return 0;
+        }
+        ```
+
+     2. 而这里printf后面列表中类型是double类型
+
+        ```c
+        int main()
+        {
+            int age = 0;
+            scanf("%d", &age);
+            printf("%d", age * 3.156E7);
+            return 0;
+        }
+        ```
 
 # 解题新思维
 
@@ -147,7 +250,14 @@
 
 3. 进制拆解问题（小时的60进制、二进制、十进制……）
 
-   1. BC23-时间转换：一道60进制的题，加上参考别人的算法，共写出了3种。其中循环算法大可以作为进制拆解的通用形式（不过我这里用的for循环，while循环更简洁，等待将for改成它）
+   1. BC23-时间转换：
+
+      1. 这道题方法很多
+      2. 一道60进制的题，加上参考别人的算法，共写出了3种。其中循环算法大可以作为进制拆解的通用形式（不过我这里用的for循环，while循环更简洁，等待将for改成它）
+
+      - 改了也没多大优化。
+
+   - 这里的循环有个好处：顺序是正的，但是需要知道 最高次 的权重
 
 4. 用到数组时，能够和输入信息同时做的事情：
 
@@ -312,28 +422,42 @@
 
    2. [字符金字塔](https://www.nowcoder.com/practice/0fae60c3b5c64699b7c0f031c2187dde?tpId=107&tags=&title=&diffculty=0&judgeStatus=0&rp=1&tab=answerKey)
 
+   ```c
+   int main()
+   {
+       int i=0;
+       int j=0,k=0;
+       int num=0;
+       scanf("%d",&num);
+       for(i=0;i<5;i++)
+       {
+           for(j=4-i;j>0;j--)
+               printf(" ");
+           for(k=0;k<=i;k++)//外循环是半开区间，内循环想要和外循环一样次数，必须是闭区间
+               printf("%d ",num);
+           printf("\n");
+       }
+       return 0;
+   }
+   ```
+
+   1. 外循环是半开区间，内循环想要和外循环一样次数，必须是闭区间。
+
+   - 这题第一次提交错误原因是：题目要求输入一个“字符”，不是一个数字  (int 也可以存储字符，但是输出必须是%c)
+
+   3. [kiki算数](https://www.nowcoder.com/practice/bcaf710fb58a44e1b678a890e6e90d7c?tpId=107&tags=&title=&diffculty=0&judgeStatus=0&rp=1&tab=answerKey)
+
       ```c
       int main()
       {
-          int i=0;
-          int j=0,k=0;
-          int num=0;
-          scanf("%d",&num);
-          for(i=0;i<5;i++)
-          {
-              for(j=4-i;j>0;j--)
-                  printf(" ");
-              for(k=0;k<=i;k++)//外循环是半开区间，内循环想要和外循环一样次数，必须是闭区间
-                  printf("%d ",num);
-              printf("\n");
-          }
+          int a=0,b=0;
+          scanf("%d%d",&a,&b);
+          printf("%d",(a*b)%100);
           return 0;
       }
       ```
 
-      1. 外循环是半开区间，内循环想要和外循环一样次数，必须是闭区间。
-
-      - 这题第一次提交错误原因是：题目要求输入一个“字符”，不是一个数字  (int 也可以存储字符，但是输出必须是%c)
+      - 错因：理解有误，加法算成乘法
 
 八、刷题后感受
 
@@ -352,4 +476,4 @@
 
    注意整型提升……（在2021.3.23，此时b站的视频在该节没有笔记，之后学习多注意）
 
-2. 第20题
+   
