--- a/学习规划/计算机学习规划/规划.md
+++ b/学习规划/计算机学习规划/规划.md
@@ -105,3 +105,5 @@
       1. 每天平均至少10h学习，则能有600h
       2. 200h整理鹏哥C视频与看完至少C的prime（plus）书籍。
       3. 300h学习C++和数据结构与算法。边学便刷题。另外，Linux和MySQL还有上面up介绍的4门重要的在无聊的时候学一学。
+         1. 100hC++
+         2. 200h数据结构与算法
