--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -4,3 +4,36 @@
 
 1. 现在想不起来的C的知识点：static修饰的变量。const修饰的变量。
 2. 现在看的第一遍不想记笔记，本打算直接看书，不记笔记了。但是发现好多之前视频中讲了一遍没记住的知识点。所以之后看第二第三编视频的时候，还是需要记笔记的。（记那种用得少的知识点）
+
+# 保留的问题
+
+1. java中汉字字符变量存储
+   1. //  C++中  char ch='男'; 为什么汉字存储需要两个字符，而单字节的 ch 变量就能存储
+      #include<cstdio>
+      int main() {
+      	char ch = '男';
+      	putchar(ch);
+      	return 0;
+      }
+
+   2. ```java
+      short s1 = 10;
+      s1 = s1 + 10; //①
+       
+      short s2 = 10;
+      s2 += 10; //2 ②
+       
+       
+      答：①会出现编译错误 原因 s1+10的结果是int型转short型 属于大到小 所以不可以 解决：加强制类型转换(小数时会有数据丢失)
+      ②正常运行 因为s2+=10属于Java中的算术运算符可以正常执行编译。
+      ```
+
+      - 这里第二个为什么正常，不知道
+
+   3. 原理 Java中最小存储单元是字节(1k=8bit) char是Unicode编码，基本数据类型中char占两个字节(即16位)，一个汉字也是两个字节所以能存储的。
+
+      ![img](https://img-blog.csdnimg.cn/20200720130013767.png)
+
+      ![img](https://img-blog.csdnimg.cn/20200720130045886.png)
+
+2. 
