--- a/学习规划/计算机学习规划/规划.md
+++ b/学习规划/计算机学习规划/规划.md
@@ -1,3 +1,12 @@
+# 需要学习的课程
+
+## 重要课程
+
+1. 计算机网络
+2. 操作系统
+
+1. 软件工程---- 一位在职 up 推荐，这个时工作能力
+
 1. 计算机网络
 
 2. 数据库
@@ -6,15 +15,26 @@
 
    ![](规划.assets/数据结构与算法.jpg)
 
-比特培训班有两张图
+## 基础课程
 
-![](规划.assets/mmexport1618196775096.jpg)
+-  计算机专业学到的
+- 目的是 掌握计算机底层原理
+- 而工作需要的是 应用层技术
 
-![](规划.assets/mmexport1618196781443.jpg)
+1. 线性代数、高等数学、离散数学、计算机科学导论、电子电路技术
+2. C/C++语言程序设计、Java语言程序设计、数据结构与算法、编译原理、软件工程、数据库系统原理、计算机组成原理、操作系统、计算机网络、汇编语言、Linux操作系统、中间件、嵌入式、需求分析、软件测试
 
-![](规划.assets/mmexport1618196784443.jpg)
 
-比特科技的推荐路线
+
+## 比特培训班路线
+
+<img src="规划.assets/mmexport1618196775096.jpg" style="zoom: 25%;" />
+
+<img src="规划.assets/mmexport1618196781443.jpg" style="zoom:25%;" />
+
+<img src="规划.assets/mmexport1618196784443.jpg" style="zoom:25%;" />
+
+### 比特鹏哥上课推荐
 
 ![img](规划.assets/clip_image003.png)
 
