--- a/学习规划/面试/提前准备面试.md
+++ b/学习规划/面试/提前准备面试.md
@@ -4,3 +4,16 @@
    3. 表达观点：“从上面几个角度，我的观点1234……，还请指教分享”
 2. 简历应当添加博客、Github的网址，Google有生成网页二维码的功能（二维码显得更高级）
 3. 我就读于某传统行业(找不到工作),但我喜欢做有挑战的事情(可以加班),所以我想跳出框架，我是一个b站重度用户(爱刷手机)，了解用户需求(LDP),所以我认为我可以很好地胜任产品经理一职(救救我).
+4. 问题："你对加班的看法"
+   -回答: 描述母亲的经历。活在城市里连呼吸都是有害的，还说什么伤身。只希望得到更多选择的权力。哭着来到世界，笑着离开。
+5. 
+6. 
+
+# 职业规划
+
+在b站评论区看到：计算机行业真的有中年危机：未来计算机行业人越来越多，与其把钱浪费在一个低效且工资高的中年人身上，不如找一个年轻人，或许只要培养半年，就完全足够代替中年人。
+所以有两个选择：
+
+1. 转行：那么就要多注意别的行业、多结识人。创业、投资
+2. 提升自身技能，即使再提升也会有一天思维跟不上。老的人不一定经验少（老的科学家、邓小平），但是反应一定慢了。这时候怎么学习新技术？
+3. 进入管理层
