--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -45,7 +45,7 @@
 
 4. bite b = 1;  short s = b + 1; --  讲过一个只是点：（short\bite ）不能和char转换
 
-5. P118-18:07   如果表达式 是 int型  ；而比较的时候是 double，那么还会转换比较成功吗？ int num;    switch(num)      case 1.1:   会成功吗
+5. P118-18:07   如果表达式 是 int型  ；而比较的时候是 double，那么还会转换比较成功吗？ int num;    switch(num)      case 1.1:   会成功吗；如果反过来：double num;   switch(num)  case 1;?
 
 # 重点内容
 
