--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -45,7 +45,7 @@
 
 4. bite b = 1;  short s = b + 1; --  讲过一个只是点：（short\bite ）不能和char转换
 
-5. P118-18:07   如果表达式 是 int型  ；而比较的时候是 double，那么还会转换比较成功吗？ int num;    switch(num)      case 1.1:   会成功吗；如果反过来：double num;   switch(num)  case 1;?
+5. P118-18:07   如果表达式 是 int型  ；而比较的时候是 double，那么还会转换比较成功吗？ int num;    switch(num)      case 1.1:   会成功吗；如果反过来：double num;   switch(num)  case 1;?第二个疑问不可能发生，因为表达式的类型有规定。
 
 # 重点内容
 
@@ -103,4 +103,4 @@
 # 视频中可以整理的算法模板
 
 1. P80-3:51   三个数求最大值，三目运算符的方法。
-2. 
+2. P119- 6:00 60分以下和以上的另一种判断
