--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -66,7 +66,11 @@
 
    ![image-20210419170413707](笔记.assets/image-20210419170413707.png)
 
-   
+4. P146-12:30 continue的跳转控制，有些陌生。
+
+5. C++和Java没有printf("%02d",n); 这样的对齐格式。然而在之前遇到过%.s的C++代码。在Java中，也有 print(n+"\t") ：
+
+   ![image-20210420175337500](笔记.assets/image-20210420175337500.png)
 
 # 已经解决的问题
 
@@ -104,3 +108,5 @@
 
 1. P80-3:51   三个数求最大值，三目运算符的方法。
 2. P119- 6:00 60分以下和以上的另一种判断
+3. p148- 算法练习中的过路口，和曾经蓝桥杯中跑步的那题类似。
+
