--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -47,6 +47,8 @@
 
 5. P118-18:07   如果表达式 是 int型  ；而比较的时候是 double，那么还会转换比较成功吗？ int num;    switch(num)      case 1.1:   会成功吗；如果反过来：double num;   switch(num)  case 1;?第二个疑问不可能发生，因为表达式的类型有规定。
 
+6. P185-2:00 本章作业，中的几个string还不太了解
+
 # 重点内容
 
 1. 自动类型转换中byte、short、char运算时自动转化为int
