--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -75,6 +75,8 @@
 5. C++和Java没有printf("%02d",n); 这样的对齐格式。然而在之前遇到过%.s的C++代码。在Java中，也有 print(n+"\t") ：
 
    ![image-20210420175337500](笔记.assets/image-20210420175337500.png)
+   
+6. 猴子那题
 
 # 已经解决的问题
 
