--- a/C++/笔记.md
+++ b/C++/笔记.md
@@ -84,7 +84,10 @@
 
    1. 快速格式化 - ctrl+alt+l
    2. 快速复制当前行 - 未知
-   3. 
+   
+9. ![image-20210423005339345](笔记.assets/image-20210423005339345.png)
+
+   [访问修饰符](https://blog.csdn.net/qq_41998938/article/details/88979734)：这篇文章介绍得挺详细得
 
 # 已经解决的问题
 
