--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -11,7 +11,7 @@
 
 1. 面试题1 不是很理解
 
-   ![20219716188003462](笔记.assets/20219716188003462.png)
+   ![20219716188003462](粗略学习笔记.assets/20219716188003462.png)
 
 2. \r 的作用忘记了
 
@@ -62,19 +62,19 @@
 
 2. 基本数据类型转换
 
-   ![IMG_20210418_221041](笔记.assets/IMG_20210418_221041.jpg)
+   ![IMG_20210418_221041](粗略学习笔记.assets/IMG_20210418_221041.jpg)
 
 3. 运算符优先级
 
-   ![image-20210419170352820](笔记.assets/image-20210419170352820.png)
+   ![image-20210419170352820](粗略学习笔记.assets/image-20210419170352820.png)
 
-   ![image-20210419170413707](笔记.assets/image-20210419170413707.png)
+   ![image-20210419170413707](粗略学习笔记.assets/image-20210419170413707.png)
 
 4. P146-12:30 continue的跳转控制，有些陌生。
 
 5. C++和Java没有printf("%02d",n); 这样的对齐格式。然而在之前遇到过%.s的C++代码。在Java中，也有 print(n+"\t") ：
 
-   ![image-20210420175337500](笔记.assets/image-20210420175337500.png)
+   ![image-20210420175337500](粗略学习笔记.assets/image-20210420175337500.png)
    
 6. 猴子吃桃那题
 
@@ -85,7 +85,7 @@
    1. 快速格式化 - ctrl+alt+l
    2. 快速复制当前行 - 未知
    
-9. ![image-20210423005339345](笔记.assets/image-20210423005339345.png)
+9. ![image-20210423005339345](粗略学习笔记.assets/image-20210423005339345.png)
 
    [访问修饰符](https://blog.csdn.net/qq_41998938/article/details/88979734)：这篇文章介绍得挺详细得
 
@@ -117,14 +117,14 @@
 
    3. 原理 Java中最小存储单元是字节(1k=8bit) char是Unicode编码，基本数据类型中char占两个字节(即16位)，一个汉字也是两个字节所以能存储的。
 
-      ![img](https://img-blog.csdnimg.cn/20200720130013767.png)
+      ![img](粗略学习笔记.assets/20200720130013767.png)
 
-      ![img](https://img-blog.csdnimg.cn/20200720130045886.png)
+      ![img](粗略学习笔记.assets/20200720130045886.png)
 
 # 视频中可以整理的算法模板
 
 1. P80-3:51   三个数求最大值，三目运算符的方法。
 2. P119- 6:00 60分以下和以上的另一种判断
 3. p148- 算法练习中的过路口，和曾经蓝桥杯中跑步的那题类似。
-4. 1234
+4. 123
 
