--- a/其他/部落冲突/部落成员.md
+++ b/其他/部落冲突/部落成员.md
@@ -5,7 +5,8 @@
 3. 小云、小楠
    1. 初二、即将辍学
 4. 双叶城
-   1. 学生
+   1. 初中
+   2. 6月18 重新上线
 5. 海神唐三/悲伤
    1. 初二
 6. 无名氏
@@ -13,4 +14,19 @@
    2. 充钱，挥霍宝石
 7. 轩尘重拾童年
    1. 初中
-8. 
+8. 阿文
+   1. 初中
+   2. 1.5小时
+9. 等一颗星
+   1. 和  流德滑  是夫妻
+10. 银子酱
+    1. 大专一年级  工业机器人  
+
+## 比较活跃的成员
+
+| 序号 | 名称       |
+| ---- | ---------- |
+| 1.   | 6466139752 |
+| 2.   | 无名氏     |
+| 3.   | 刘鹏飞     |
+| 4.   | 阿文       |
