--- a/学习规划/计算机学习规划/规划.md
+++ b/学习规划/计算机学习规划/规划.md
@@ -127,3 +127,11 @@
       3. 300h学习C++和数据结构与算法。边学便刷题。另外，Linux和MySQL还有上面up介绍的4门重要的在无聊的时候学一学。
          1. 100hC++
          2. 200h数据结构与算法
+
+# Java路线
+
+所以未来4-6月
+
+1. 每天平均至少10h学习，则能有600h
+2. 整理Java视频与看完至少  《Java核心技术卷一》  书籍。
+3. 初步接触Java的数据结构与算法。适当做做课外题。另外，Linux和MySQL还有上面up介绍的4门重要的在无聊的时候学一学。
