--- a/学习规划/计算机学习规划/规划.md
+++ b/学习规划/计算机学习规划/规划.md
@@ -135,3 +135,6 @@
 1. 每天平均至少10h学习，则能有600h
 2. 整理Java视频与看完至少  《Java核心技术卷一》  书籍。
 3. 初步接触Java的数据结构与算法。适当做做课外题。另外，Linux和MySQL还有上面up介绍的4门重要的在无聊的时候学一学。
+
+书籍：Effective Java（用于Java进阶学习）
+
