--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -127,3 +127,28 @@
 2. P119- 6:00 60分以下和以上的另一种判断
 3. p148- 算法练习中的过路口，和曾经蓝桥杯中跑步的那题类似。
 4. 12
+
+
+
+# 第十二章 异常
+
+1. 异常系统图
+
+   ![image-20210701160157956](粗略学习笔记.assets/image-20210701160157956.png)
+
+2. 在try-catch-finally中知识点：return 时 保存临时变量
+
+# 零散知识点：
+
+1. 局部变量没有默认值（如果定义了局部变量而没有赋值直接使用就会导致编译错误），可以先声明后赋值；或者声明但是不使用也不会报错。
+
+   1. new在堆上分配了空间，则数组的元素就会获得默认值，即使数组变量为局部变量也是如此
+
+       int[] value = new int[10];
+   
+2. ```
+   Object obj1 = true ? new Integer(1) : new Double(2.0);//三元运算符【是一个整体】obj1 被赋值 1.0
+   ```
+   
+3. 数组默认是创建在堆中的
+
