--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -138,6 +138,16 @@
 
 2. 在try-catch-finally中知识点：return 时 保存临时变量
 
+# 第十四章 集合
+
+1. 需要记住的集合体系图
+
+   ![image-20210703100740138](粗略学习笔记.assets/image-20210703100740138.png)
+
+   ![image-20210703100943255](粗略学习笔记.assets/image-20210703100943255.png)
+
+2. 
+
 # 零散知识点：
 
 1. 局部变量没有默认值（如果定义了局部变量而没有赋值直接使用就会导致编译错误），可以先声明后赋值；或者声明但是不使用也不会报错。
@@ -158,4 +168,4 @@
 
    我的初步研究结果为：上面说法错误，无论是concat或replace方法，最后都是创建了新的String方法进行返回。所以value数组确实不能改变。
    
-2. 123
+2. 
