--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -146,7 +146,7 @@
 
    ![image-20210703100943255](粗略学习笔记.assets/image-20210703100943255.png)
 
-2. 
+2. Map存储机制![image-20210704122828912](粗略学习笔记.assets/image-20210704122828912.png)
 
 # 零散知识点：
 
@@ -170,4 +170,3 @@
    
 2. 1
 
-2
