--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -148,6 +148,10 @@
 
 2. Map存储机制![image-20210704122828912](粗略学习笔记.assets/image-20210704122828912.png)
 
+# 第十七章 线程
+
+1. 线程状态转换图，其中Read -> Running 的状态需要注意![593.0592_韩顺平Java_线程7大状态(Av203821664,P593).mp4_20210708_182146.140](粗略学习笔记.assets/593.0592_韩顺平Java_线程7大状态(Av203821664,P593).mp4_20210708_182146.140.jpg)
+
 # 零散知识点：
 
 1. 局部变量没有默认值（如果定义了局部变量而没有赋值直接使用就会导致编译错误），可以先声明后赋值；或者声明但是不使用也不会报错。
