--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -152,6 +152,11 @@
 
 1. 线程状态转换图，其中Read -> Running 的状态需要注意![593.0592_韩顺平Java_线程7大状态(Av203821664,P593).mp4_20210708_182146.140](粗略学习笔记.assets/593.0592_韩顺平Java_线程7大状态(Av203821664,P593).mp4_20210708_182146.140.jpg)
 
+# 第十九章 IO
+
+1. IO流类型分类![image-20210726093601565](粗略学习笔记.assets/image-20210726093601565.png)
+2. 分类<img src="粗略学习笔记.assets/image-20210726103912253.png" alt="image-20210726103912253" style="zoom:200%;" />
+
 # 零散知识点：
 
 1. 局部变量没有默认值（如果定义了局部变量而没有赋值直接使用就会导致编译错误），可以先声明后赋值；或者声明但是不使用也不会报错。
@@ -172,5 +177,5 @@
 
    我的初步研究结果为：上面说法错误，无论是concat或replace方法，最后都是创建了新的String方法进行返回。所以value数组确实不能改变。
    
-2. 1
+2. 12
 
