--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -171,10 +171,12 @@
    
 3. 数组默认是创建在堆中的
 
+4. [格式控制符](https://blog.csdn.net/quhongjuan12/article/details/79781101)
+
 # 疑问
 
 1. StringBuffer中，String修改对象，怎么是修改了value数组的指向？不是说指向不能更改么
 
    我的初步研究结果为：上面说法错误，无论是concat或replace方法，最后都是创建了新的String方法进行返回。所以value数组确实不能改变。
    
-2. 123
+2. 12
