--- a/JavaSE/粗略学习笔记.md
+++ b/JavaSE/粗略学习笔记.md
@@ -88,6 +88,8 @@
 9. ![image-20210423005339345](粗略学习笔记.assets/image-20210423005339345.png)
 
    [访问修饰符](https://blog.csdn.net/qq_41998938/article/details/88979734)：这篇文章介绍得挺详细得
+   
+10. 逆转单链表，试试不创建新的链表！![image-20210805150204520](粗略学习笔记.assets/image-20210805150204520.png)
 
 # 已经解决的问题
 
