--- a/学习规划/面试/提前准备面试.md
+++ b/学习规划/面试/提前准备面试.md
@@ -17,3 +17,12 @@
 1. 转行：那么就要多注意别的行业、多结识人。创业、投资
 2. 提升自身技能，即使再提升也会有一天思维跟不上。老的人不一定经验少（老的科学家、邓小平），但是反应一定慢了。这时候怎么学习新技术？
 3. 进入管理层
+
+
+
+# 一个简历的参考权重
+
+1. ![片段1](提前准备面试.assets/CT-20211031122241.png)
+2. ![片段二](提前准备面试.assets/CT-20211031122500.png)
+3. 其中项目 也可以是 GitHub上的别人的项目，进行优化。
+4. 汤众老师也有项目。
