--- a/aliyun/阿里云服务器.md
+++ b/aliyun/阿里云服务器.md
@@ -34,6 +34,8 @@
 
    访问站点：http://123.57.92.107/index.php
 
+   wordpress登陆界面：http://123.57.92.107/wp-login.php
+
 9. ![image-20211101213513277](阿里云服务器.assets/image-20211101213513277.png)
 
 10. 
