--- a/JavaSE/笔记.md
+++ b/JavaSE/笔记.md
@@ -13,3 +13,15 @@
 4. 1995 sun 试试发布Java第一个版本
 5. 2009 甲骨文公司收购 sun  ，  2011 发布 java 7
 
+
+
+
+
+---
+
+# JavaSE项目中的路径表示
+
+在JavaSE 中路径也分为相对路径和绝对路径. 
+相对路径:从工程名开始算 比如：2021.5.4工程名。src中的应该是从 src开始算。如果要找src同一级下的目录，： ./other
+绝对路径:盘符:/目录/文件名
+
