--- a/aliyun/阿里云服务器.md
+++ b/aliyun/阿里云服务器.md
@@ -16,12 +16,11 @@
 
 6. 数据库账号资料数据库名：**www_seeker_ink**
 
-   用户：**www_seeker_ink**
-
-   密码：**FzZynaFfjF**
-
-   访问站点：http://www.seeker.ink/index.php
-
+   |-用户名: SuperCoder
+|-新密码: N3311
+   
+访问站点：http://www.seeker.ink/index.php
+   
 7. ![image-20211101211013552](阿里云服务器.assets/image-20211101211013552.png)
 
 8. 目前使用的站点：数据库账号资料
