--- a/寒假笔记/1_12碎片知识.md
+++ b/寒假笔记/1_12碎片知识.md
@@ -42,3 +42,20 @@
 1. 谈论学习的事情时,总结:父亲并不会按照我的思维想事情.认为谈恋爱会影响学习.殊不知一个人的我已经堕落成什么样子了.所以这些事情还是不要和他们再说了.
 2. 我待了很多面具.父母眼中.同学.都不是真正的我.
 2. 最让我难过的事情是:父亲居然认为我到现在没牵过女生的手是假话!!!这感觉就像是,在一起很久的人突然告诉我,从来没喜欢过我一样.不过想想也可以理解.毕竟我对他们说的慌也不少.或许自己管好自己是最好的结局.我们之间并没有太多的了解.相反的是我们之间有太多的谎言.
+
+
+
+# 问题
+
+1. 为什么反射需要无参构造器
+1. 客户端怎么设置request.setCharacterEncoding  换句话说,一个页面请求头等信息是通过什么添加的,然后传送给服务器  看javaWeb中添加书籍的那一个模块.
+   问题表述并不准确,因为客户端返回的参数编码方式是固定的.只有在接受前,去改变接收的编码方式,即设置的request.setCharacterEncoding("UTF-8").只是我的JavaWeb中没使用,因为我的表单都是get方式,所以也就不必要设置了.
+
+
+
+# 道理
+
+1. 做得快比做得好重要100倍
+2. 如果你需要,我就和你在一起,如果不需要,我也不会粘着你,因为我也有能让我有成就感的事情去做.对你好只是单纯地爱你,并不所求你任何东西.
+2. 会休息才会学习.放松,该做的事情尽快做.
+2. 学习,做试卷/作业规定时间,才有时间回来复习.
