--- a/寒假笔记/1_12碎片知识.md
+++ b/寒假笔记/1_12碎片知识.md
@@ -50,6 +50,7 @@
 1. 为什么反射需要无参构造器
 1. 客户端怎么设置request.setCharacterEncoding  换句话说,一个页面请求头等信息是通过什么添加的,然后传送给服务器  看javaWeb中添加书籍的那一个模块.
    问题表述并不准确,因为客户端返回的参数编码方式是固定的.只有在接受前,去改变接收的编码方式,即设置的request.setCharacterEncoding("UTF-8").只是我的JavaWeb中没使用,因为我的表单都是get方式,所以也就不必要设置了.
+1. stringBuilder和Buffer
 
 
 
@@ -59,3 +60,4 @@
 2. 如果你需要,我就和你在一起,如果不需要,我也不会粘着你,因为我也有能让我有成就感的事情去做.对你好只是单纯地爱你,并不所求你任何东西.
 2. 会休息才会学习.放松,该做的事情尽快做.
 2. 学习,做试卷/作业规定时间,才有时间回来复习.
+2. 戒的最高境界就是不戒.(意味着多做运动,不想这些事情)
