--- a/寒假笔记/1_12碎片知识.md
+++ b/寒假笔记/1_12碎片知识.md
@@ -61,3 +61,5 @@
 2. 会休息才会学习.放松,该做的事情尽快做.
 2. 学习,做试卷/作业规定时间,才有时间回来复习.
 2. 戒的最高境界就是不戒.(意味着多做运动,不想这些事情)
+2. 职业就是万恶之源:"工作就是为了不工作","努力就是为了不努力"
+2. 一二线城市容不下肉身,三四线城市容不下灵魂,何以解忧,唯有暴富
