--- a/aliyun/阿里云服务器.md
+++ b/aliyun/阿里云服务器.md
@@ -1,4 +1,4 @@
-1. 实例用户名：root  密码：Nj331150871
+1. 实例用户名：root  密码：email
 
 2. VNC登陆密码：Nj3311
 
@@ -19,8 +19,9 @@
    |-用户名: SuperCoder
 |-新密码: N3311
    
+
 访问站点：http://www.seeker.ink/index.php
-   
+
 7. ![image-20211101211013552](阿里云服务器.assets/image-20211101211013552.png)
 
 8. 目前使用的站点：数据库账号资料
