请求/响应原理

--- a/学习其他技能/科目三/行驶路线.md
+++ b/学习其他技能/科目三/行驶路线.md
@@ -5,20 +5,20 @@
 2. 直线行驶：一档5s， 二档5s，三档5s，四档也5s？
    * 是的, 并且换挡时平稳加速，才能保证攒够时间 / 档位也匹配
 3. ***直线行驶中变更四个档位？(有疑问)***
-   * ***根本问题: 30公里以上速度行驶750米是什么项目.***
-   * ***问题1:人行横道结束后的提速上三档,是否算是直线行驶?***
-   * ***直线行驶语音播报的吧?***
+   * ***根本问题: 30公里以上速度行驶750米是什么项目.***(不管,就按照路线跑)
+   * ***问题1:人行横道结束后的提速上三档,是否算是直线行驶?***(不管,就按照路线跑)
+   * ***直线行驶语音播报的吧?***(确定有)
 4. 错误使用灯光 / 带挡打火扣100。那么直线行驶偏移 / 档位不匹配呢？
    * 都是不合格
-   * ***后溜30厘米不合格/好像是扣分***
+   * ***后溜30厘米不合格/好像是扣分***(不管,就按照路线跑)
 5. 超车完成后，回去要打右转灯？变道都要打灯？
    * 都要打灯
-6. ***直线行驶开始和结束有提示音?***
+6. ***直线行驶开始和结束有提示音?***(有)
 7. 1000转以上,1500转以下（2000转三秒以上就速度档位不匹配）
 8. 各个档位的速度匹配? 什么速度换挡？
    * 看下面的挡位
 9. 提速的时候稳住1200转，不要加速太快
-   * ***提速主要看 转速?而不是看车速***
+   * ***提速主要看 转速?而不是看车速***(不管,考试只看速度)
 10. 换一档是降到20以下，比较平稳。靠发动机制动会扣分？
     * 待
 11. 第三个右转走哪条道好（左边？）
@@ -42,10 +42,13 @@
 #### 难点
 
 1. 细节: 
-   1. 灯光测试: 语音一定听准确,不用急着做动作,想清楚
+   1. 灯光测试: 
+      * 语音一定听准确,不用急着做动作,想清楚.
+      * 不能抢语音
+      * 远近交替,不要扶着.拨了就立刻离开.再波下一次
    2. 刹车：
-      1. 有提示音: 斑马线 / 左转 / 右转箭头根部 / 路口 
-      2. 无提示音: 公交车站 / 会车 / ***学校(前后都点一下,都不点也行)***[有疑问]
+      1. 有提示音: 斑马线 / 左转 / 右转箭头根部 / 路口 / 会车
+      2. 无提示音: 公交车站 / ***学校(前后都点一下,都不点也行)***[有疑问]
    3. 转向灯：(技巧: 报信号立刻考虑转向灯, 不能光等着点刹车)
       1. 有提示音: 左转 / 右转[后两个] / 变道 / 掉头 / 变道 / 超车(变回来时没有提示音,自己打左灯)
       2. 无提示音: [前三个]右转 / 自主变道[学校后斑马线前]
@@ -64,7 +67,12 @@
    11. 换挡:
        1.  平稳加速，才能保证攒够时间 / 档位也匹配
        2. 提速的时候转速1200转，不要加速太快
-   12. 
+   12. 靠边停车
+       * 微调(15°)
+       * 车头本来就稍微窄
+       * 刚开始,打右转,不能超过点位.防止车头压线
+   13. 会车的刹车,调好方向点
+   14. 路口的刹车,语音后几秒点就行(别太早)
 
 #### 行驶路线
 
@@ -80,7 +88,7 @@
 
 3. **第二个右转**
 
-   * **点位: 车窗右下角快看不到黄线**
+   * **点位: 雨刮器碰到线 打一圈看情况加90°**
 
 4. 会车: 提示音后只刹车
 
